# metric_space_rust

./: .gitignore  100.txt  768.txt  Cargo.toml  Dockerfile  README.md  bench_output.txt  benchmarks.txt  extract_numbers.sh  run_all_benchmarks.sh  run_infosys_experiments.sh  with_simd_xor.txt  without_simd_xor.txt
SISAP2025_experiments/: Cargo.toml
SISAP2025_experiments/examples/: evp_brute_force_dino_bsp_example.rs  evp_brute_force_dino_hamming_example.rs  evp_brute_force_dino_whamming_example.rs  evp_brute_force_glove_100_bsp_example.rs  evp_brute_force_glove_100_hamming_example.rs  evp_brute_force_glove_100_whamming_example.rs  evp_brute_force_laion_clip_bsp_example.rs  evp_brute_force_laion_clip_hamming_example.rs  evp_brute_force_laion_clip_pca500_bsp_example.rs  evp_brute_force_laion_clip_whamming_example.rs  evp_brute_force_pubmed_bsp_example.rs  evp_brute_force_pubmed_i8_example.rs  evp_mf_descent.rs  make_evp_example.rs
benchmarking/: Cargo.toml
benchmarking/benches/: bsp_similarity.rs  euc_distance.rs  euc_distance_16bit.rs  euc_distance_32bit.rs  euc_distance_4bit.rs  euc_distance_8bit.rs  euc_distance_matrix.rs  evp_100dim.rs  evp_384dim.rs  evp_500dim.rs  evp_768dim.rs  evp_different_x.rs  evp_distance_3.rs  evp_similarity.rs  hamming_distance.rs  hamming_distance_matrix.rs  masked_addition.rs  multiple_bit_eucs.rs  multiple_eucs.rs  multiple_one_bit.rs  one_bit.rs  pca.rs  scalar_product_distance.rs
big_knn/: Cargo.toml
big_knn/src/: big_knn_r_descent.rs  big_knn_r_descent_OLD.txt  dao_manager.rs  knn_r_descent.rs  lib.rs  table_initialisation.rs
bits/: Cargo.toml
bits/benches/: bench.rs  euc_distance.rs  example.rs  hamming_distance.rs
bits/examples/: speed_test.rs
bits/src/: bits.txt  bitsimd.rs  cubeoct.rs  cubic.rs  evp.rs  lib.rs
dao/: Cargo.toml
dao/examples/: README.txt  abstract_dao.rs  bincode_example.rs  bincode_example_tofile.rs  bsp_encoding_test.rs  bsp_encoding_test_2.rs  cube_speed_test.rs  cubeoct_speed_test.rs  generic_loader.rs  glove_load_example.rs  hdf5_example.rs  hdf5_loader_api.rs  hdf5_min.rs  hdf5_web_example.rs  laion_load_example.rs  make_evp_example.rs  mf_csv_to_h5.rs  poly_dao_experiment.rs  pubmed_load_example.rs  serialize_example.rs  serialize_example2.rs  speed_test.rs  stack_adt_example.rs
dao/src/: bits.txt  class_labels.rs  convert_f32_to_bsp.rs  convert_f32_to_cube_oct.rs  convert_f32_to_cubic.rs  convert_f32_to_evp.rs  convert_f32_to_hamming.rs  csv_dao_loader.rs  csv_dao_matrix_loader.rs  csv_f32_loader.rs  csv_loader.rs  generic_loader.rs  glove100_hdf5_dao_loader.rs  hdf5_dao_loader.rs  hdf5_dao_matrix_loader.rs  hdf5_f32_loader.rs  hdf5_to_dao_loader.rs  jit_dao.rs  laion_10M_hdf5_dao_loader.rs  laion_10M_pca500_hdf5_dao_loader.rs  laion_10_m_hdf5_dao_loader.rs  laion_10_m_pca500_hdf5_dao_loader.rs  lib.rs  nn_table.rs  pubmed_hdf5_dao_loader.rs  pubmed_hdf5_gt_loader.rs  pubmed_hdf5_mmap_loader.rs  pubmed_hdf5_to_dao_loader.rs  pubmed_hdf5_to_i8_dao_loader.rs
descent/: Cargo.toml
descent/examples/: fiddle1.rs  multiple_f32_descent.rs  poly_descent_alter_nns.rs  poly_descent_alter_swarm.rs  rng_test.rs  save_rng.rs  search_cube_descent.rs  search_cube_oct_descent.rs  search_descent.rs  search_f32_descent.rs  serialize_descent.rs  serialize_dino_descent.rs  serialize_example3.rs  serialize_rng_from_serialised_descent.rs
descent/src/: heap.rs  lib.rs  non_nan.rs  pair.rs
info_sys_measurements/: Cargo.toml
info_sys_measurements/examples/: 16bit_brute_force_example.rs  4bit_brute_force_example.rs  8bit_brute_force_example.rs  evp_100dim_brute_force_example.rs  evp_384dim_brute_force_example.rs  evp_500dim_brute_force_example.rs  evp_768dim_brute_force_example.rs  f32_euc_brute_force_example.rs  hamming_100dim_brute_force_example.rs  hamming_384dim_brute_force_example.rs  hamming_500dim_brute_force_example.rs  hamming_768dim_brute_force_example.rs  pca_brute_force_example.rs  pca_euc_brute_force_example.rs
info_sys_measurements/old_many_many/: evp_100dim_brute_force_example.rs  hamming_100dim_brute_force_example.rs
r_descent/: Cargo.toml
r_descent/examples/: check_init.rs  check_matrix.rs  check_matrix_f32_dino.rs  check_r_descent_bsp_dino.rs  check_r_descent_bsp_pubmed.rs  clap_parser.rs  nality_test.rs  save_r_descent_bsp_pubmed.rs  search_saved_pubmed.rs
r_descent/matlab/: query_reverse.txt  reverse_link.txt  richard_build_nns.txt
r_descent/src/: functions.rs  knn_search.rs  lib.rs  main.rs  matrix.rs  read_me.txt  table_initialisation.rs  table_initialisation_bsp.rs  updates.rs
r_descent_matrix/: Cargo.toml
r_descent_matrix/examples/: check_matrix.rs
r_descent_matrix/matlab/: richard_build_nns.txt
r_descent_matrix/src/: lib.rs
rp_forest/: Cargo.toml
rp_forest/examples/: check_data.rs  check_dp.rs  test.rs
rp_forest/src/: dao.rs  lib.rs  main.rs
sisap/: Cargo.toml
sisap/examples/: evp_brute_force_dino_bsp_example.rs  evp_brute_force_dino_hamming_example.rs  evp_brute_force_dino_whamming_example.rs  evp_brute_force_glove_100_bsp_example.rs  evp_brute_force_glove_100_hamming_example.rs  evp_brute_force_laion_clip_bsp_example.rs  evp_brute_force_laion_clip_hamming_example.rs  evp_brute_force_laion_clip_pca500_bsp_example.rs  evp_brute_force_laion_clip_whamming_example.rs  evp_brute_force_pubmed_bsp_example.rs  evp_brute_force_pubmed_i8_example.rs  evp_mf_descent.rs
sisap_2025/: Cargo.toml
sisap_2025/examples/: evp_brute_force_dino_bsp_example.rs  evp_brute_force_dino_hamming_example.rs  evp_brute_force_dino_whamming_example.rs  evp_brute_force_glove_100_bsp_example.rs  evp_brute_force_glove_100_hamming_example.rs  evp_brute_force_glove_100_whamming_example.rs  evp_brute_force_laion_clip_bsp_example.rs  evp_brute_force_laion_clip_hamming_example.rs  evp_brute_force_laion_clip_pca500_bsp_example.rs  evp_brute_force_laion_clip_whamming_example.rs  evp_brute_force_pubmed_bsp_example.rs  evp_brute_force_pubmed_i8_example.rs  evp_mf_descent.rs
utils/: Cargo.toml
utils/examples/: test_dcg.rs
utils/src/: address.rs  index.rs  lib.rs  non_nan.rs  non_nan_f64.rs  pair.rs
(+80 files in other folders)
