[workspace]
resolver = "2"
members = [
    "benchmarking",
    "bits",
    "dao",
    "metrics",
    "descent",
    "rp_forest",
    "utils",
    "r_descent",
    "r_descent",
    "sisap",
]

[profile.release]
debug = false
debug-assertions = false
overflow-checks = false
lto = "fat"
panic = 'abort'
incremental = false
codegen-units = 1
strip = true
