[workspace]
resolver = "2"
members = [
    "benchmarking",
    "bits",
    "dao",
    "metrics",
    "descent",
    "rp_forest",
    "utils",
    "r_descent",
    "sisap_2025",
]

[workspace.dependencies]
utils = { path = "utils" }
rp_forest = { path = "rp_forest" }
metrics = { path = "metrics" }
descent = { path = "descent" }
r_descent = { path = "r_descent" }
bits = { path = "bits" }
dao = { path = "dao" }

anndists = "0.1.2"
anyhow = "1.0.98"
bincode = "1.3.3"
bitvec_simd = "0.20.5"
byte-unit = { version = "5.1.6", default-features = false, features = [
    "byte",
    "rust_decimal",
] }
chrono = "0.4.41"
clap = { version = "4.5.38", features = ["derive"] }
csv = "1.3.1"
deepsize = { version = "0.2.0", features = ["smallvec"] }
divan = "0.1.21"
hdf5 = { version = "0.10.1", package = "hdf5-metno", features = [
    "blosc",
    "static",
] }
itertools = "0.14.0"
log = "0.4.27"
ndarray = { version = "0.16.1", features = [
    "serde",
    "matrixmultiply-threading",
    "rayon",
    "deepsize",
] }
parking_lot = "0.12.3"
pretty_env_logger = "0.5.0"
rand = "0.9.1"
rand_chacha = "0.9.0"
rand_distr = "0.5.1"
randperm-crt = "0.3.0"
rayon = "1.10.0"
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0"
toml = "0.8.22"
tracing = "0.1.41"
tracing-subscriber = { version = "0.3.19", features = ["env-filter"] }
twox-hash = "2.1.0"
wide = "0.7.32"

[patch.crates-io]
ndarray = { git = "https://github.com/fmckeogh/ndarray" }

[profile.release]
debug = true
strip = false

debug-assertions = false
overflow-checks = false
lto = "fat"
panic = 'unwind'
incremental = false
codegen-units = 1
