[package]
name = "benchmarking"
version = "0.1.0"
edition = "2021"

[[bench]]
name = "evp_similarity"
harness = false

[[bench]]
name = "euc_distance"
harness = false

[[bench]]
name = "euc_distance_4bit"
harness = false

[[bench]]
name = "euc_distance_8bit"
harness = false

[[bench]]
name = "euc_distance_16bit"
harness = false

[[bench]]
name = "euc_distance_32bit"
harness = false

[[bench]]
name = "masked_addition"
harness = false

[dependencies]
dao.workspace = true
bits.workspace = true
metrics.workspace = true
ndarray.workspace = true

[dev-dependencies]
divan.workspace = true
