[package]
name = "benchmarking"
version = "0.1.0"
edition = "2021"

[[bench]]
name = "evp_similarity"
harness = false

[[bench]]
name = "evp_different_x"
harness = false

[[bench]]
name = "scalar_product_distance"
harness = false

[[bench]]
name = "multiple_eucs"
harness = false

[[bench]]
name = "pca"
harness = false

[[bench]]
name = "euc_distance"
harness = false

[[bench]]
name = "euc_distance_4bit"
harness = false

[[bench]]
name = "euc_distance_8bit"
harness = false

[[bench]]
name = "euc_distance_16bit"
harness = false

[[bench]]
name = "euc_distance_32bit"
harness = false

[[bench]]
name = "masked_addition"
harness = false

[[bench]]
name = "one_bit"
harness = false

[dependencies]
dao.workspace = true
bits.workspace = true
metrics.workspace = true
ndarray.workspace = true
criterion = "0.8.1"
rand = "0.9.2"

[dev-dependencies]
divan.workspace = true
criterion = "0.8.1"
