[package]
name = "big_knn"
version = "0.1.0"
edition = "2021"

[dependencies]
utils.workspace = true
dao.workspace = true
bits.workspace = true
ndarray.workspace = true
anyhow.workspace = true
log.workspace = true
clap.workspace = true
pretty_env_logger.workspace = true
r_descent.workspace = true
hdf5.workspace = true
rayon.workspace = true
rand.workspace = true

jemallocator = "0.5.4"
bincode = "1.3.3"
itertools = "0.14.0"
serde = { version = "1.0.219", features = ["derive"] }


