[package]
name = "bits"
version = "0.1.0"
edition = "2021"

[dependencies]
utils.workspace = true
bitvec_simd.workspace = true
wide.workspace = true
ndarray.workspace = true
rayon.workspace = true

[dev-dependencies]
divan.workspace = true
#portable-simd = { version = "0.10", features = ["into_std"] }  # Check https://crates.io/crates/portable-simd
