[package]
name = "dao"
version = "0.1.0"
edition = "2021"

[dependencies]
anndists = "0.1.2"
anyhow = "1.0.95"
rayon = "1.10.0"
tracing = "0.1.41"
csv = "1.3.1"
ndarray = { version = "0.16.1", features=["serde"] }
serde = { version = "1.0.217", features = ["derive"] }
toml = "0.8.19"
serde_json = "1.0.137"
bincode = "1.3.3"
hdf5 = { package = "hdf5-metno", version = "0.9.0" }

