[package]
name = "dao"
version = "0.1.0"
edition = "2021"

[dependencies]
bits.workspace = true
utils.workspace = true
metrics.workspace = true
anndists.workspace = true
anyhow.workspace = true
rayon.workspace = true
tracing.workspace = true
csv.workspace = true
ndarray.workspace = true
serde.workspace = true
toml.workspace = true
bincode.workspace = true
hdf5.workspace = true
bitvec_simd.workspace = true
wide.workspace = true
deepsize.workspace = true
log.workspace = true
