[package]
name = "descent"
version = "0.1.0"
edition = "2021"

[dependencies]
rp_forest.workspace = true
utils.workspace = true
dao.workspace = true
bits.workspace = true
metrics.workspace = true
ndarray.workspace = true
serde.workspace = true
serde_json.workspace = true
anyhow.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
bitvec_simd.workspace = true
wide.workspace = true
rand_chacha.workspace = true
rand.workspace = true
itertools.workspace = true
bincode.workspace = true
rayon.workspace = true
twox-hash.workspace = true
