[package]
name = "info_sys_measurements"
version = "0.1.0"
edition = "2024"

[dependencies]
utils.workspace = true
dao.workspace = true
bits.workspace = true
metrics.workspace = true
descent.workspace = true
ndarray.workspace = true
anyhow.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
bitvec_simd.workspace = true
wide.workspace = true
rayon.workspace = true
log.workspace = true
clap.workspace = true
pretty_env_logger.workspace = true
r_descent.workspace = true
hdf5.workspace = true
jemallocator = "0.5.4"
rand = "0.9.2"
