[package]
name = "r_descent_matrix"
version = "0.1.0"
edition = "2021"

[dependencies]

dao = {path="../dao"}
utils = {path="../utils"}
bits = {path="../bits"}
metrics = {path="../metrics"}
ndarray = { version="0.16.1", features=["serde","matrixmultiply-threading", "rayon"] }  # "matrixmultiply-threading"
#blas-src = { version = "0.10", features = ["openblas"] }
#openblas-src = { version = "0.10", features = ["cblas", "static"] }
serde = "1.0.217"
anyhow = "1.0.94"
tracing = "0.1.41"
bitvec_simd = "0.20.5"
rand_chacha = "0.3.1"
rand = "0.8.5"
clap = { version = "4.5.37", features = ["derive"] }

