[package]
name = "r_descent_matrix"
version = "0.1.0"
edition = "2021"

[dependencies]

dao = {path="../dao"}
array2d = "0.3.2"
randperm-crt = "0.3.0"
utils = {path="../utils"}
bits = {path="../bits"}
metrics = {path="../metrics"}
ndarray = { version="0.16.1", features=["serde"] }
serde = "1.0.217"
anyhow = "1.0.94"
tracing = "0.1.41"
bitvec_simd = "0.20.5"
rand_chacha = "0.3.1"
rand = "0.8.5"

