[package]
name = "rp_forest"
version = "0.1.0"
edition = "2021"

[dependencies]
dao.workspace = true
metrics.workspace = true
anndists.workspace = true
anyhow.workspace = true
csv.workspace = true
rayon.workspace = true
rand.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
itertools.workspace = true
rand_distr.workspace = true
rand_chacha.workspace = true
ndarray.workspace = true
serde.workspace = true
serde_json.workspace = true
utils.workspace = true
