[package]
name = "sisap"
version = "0.1.0"
edition = "2021"

[dependencies]
utils.workspace = true
dao.workspace = true
bits.workspace = true
metrics.workspace = true
descent.workspace = true
ndarray.workspace = true
anyhow.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
bitvec_simd.workspace = true
wide.workspace = true
rayon.workspace = true
