[package]
name = "utils"
version = "0.1.0"
edition = "2021"

[dependencies]
anndists = "0.1.2"
anyhow = "1.0.94"
csv = "1.3.1"
rayon = "1.10.0"
rand = "0.8.5"
tracing = "0.1.41"
tracing-subscriber = "0.3.19"
itertools = "0.13.0"
rand_distr = "0.4.3"
rand_chacha = "0.3.1"
ndarray = { version="0.16.1", features=["serde"] }
serde = "1.0.217"
serde_json = "1.0"
randperm-crt = "0.3.0"
