[package]
name = "utils"
version = "0.1.0"
edition = "2021"

[dependencies]
rand.workspace = true
rand_distr.workspace = true
rand_chacha.workspace = true
ndarray.workspace = true
randperm-crt.workspace = true
byte-unit.workspace = true
num-traits = "0.2.19"
serde.workspace = true
hdf5.workspace = true
deepsize.workspace = true
